Flex Wrap to avoid overflow

--- a/src/components/ProjectList/ProjectList.css
+++ b/src/components/ProjectList/ProjectList.css
@@ -33,6 +33,7 @@
 .project-list ul {
     margin: 10px 0;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .project-list li {
